# metabuilder

./: .gitattributes  .gitignore  .travis.yml  LICENSE  README.md  appveyor.yml  index.html  metabuilder.sln  metabuilder.vcxproj.filters  params.json
metabuilder/: LICENSE  Makefile.am  README.md  autogen.sh  bootstrap_gnumakeclang_cygwin.sh  bootstrap_gnumakeclang_osx.sh  bootstrap_gnumakeclang_posix.sh  bootstrap_gnumakegcc_cygwin.sh  bootstrap_msvc2012_windows.bat  bootstrap_msvc2013_windows.bat  bootstrap_posix.sh  build_ninja_linux.sh  configure.ac  generatepremade_allplatforms_cygwin.sh  generatepremade_allplatforms_posix.sh  gnumake_gcc_posix.sh  gnumake_gcc_windows.bat  gnumakeclang_cygwin.sh  gnumakeclang_osx.sh  gnumakeclang_posix.sh  gnumakeclang_windows.sh  gnumakegcc_cygwin.sh  gnumakegcc_mingw.sh  gnumakegcc_posix.sh  gnumakegcc_windows.bat  make_gcc.bat  metabuilder.lua  metabuilder.vcxproj  metabuilder.vcxproj.filters  metabuilder_posix.lua  metabuilder_windows.lua  msvc2010_windows.bat  msvc2012_windows.bat  msvc2013_windows.bat  msvc2015_windows.bat  ninja_linux.sh  solution_windows.lua  xcode_osx.command
metabuilder/ci/: ci.sh
metabuilder/metabase/: gnumake_gcc_common.lua  gnumake_gcc_posix.lua  gnumake_gcc_windows.lua  gnumakeclang_common.lua  gnumakeclang_cygwin.lua  gnumakeclang_mingw.lua  gnumakeclang_osx.lua  gnumakeclang_posix.lua  gnumakeclang_raspberrypi.lua  gnumakeclang_windows.lua  gnumakegcc_common.lua  gnumakegcc_cygwin.lua  gnumakegcc_mingw.lua  gnumakegcc_posix.lua  gnumakegcc_windows.lua  inspect.lua  make_gcc_linux.lua  mbfilepath.lua  mbstring.lua  mbutil.lua  metabase_common.lua  msvc2010_windows.lua  msvc2010_windows_x64.lua  msvc2010_windowsx64.lua  msvc2012_android.lua  msvc2012_windows.lua  msvc2012_windows_x64.lua  msvc2012_windowsx64.lua  (+37 more)
src/: config.h  (+9 more)
(+284 files in other folders)
